# hatch-vcs-footgun-example

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  prepare_pypi_readme.py  release.yaml  test.yaml
hatch_vcs_footgun_example/: __init__.py  main.py  version.py
tests/: .pre-commit-config.yaml  conftest.py  setup_venv.py  test_version.py
